<resources>
    <string name="app_name">First Project</string>
    <string name="mobile_no">Mobile No</string>
    <string name="dob">Date of Birth (DD-MM-YYYY)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="something_went_wrong">Something Went Wrong\nTry Again Later</string>


    <string name="name_label">Name: %s</string>
    <string name="email_label">Email: %s</string>
    <string name="dob_label">Date Of Birth: %s</string>
    <string name="gender_label">Gender: %s</string>
    <string name="mobile_label">Mobile No: %s</string>
    <string name="age_label">Age: %s</string>
    <string name="salary_label">Salary: %s</string>

    <string name="task_update">Task Update</string>
    <string name="profile">Profile</string>
    <string name="add_your_task">Add Your Task</string>
    <string name="id">Enter Your Id</string>


</resources>