<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/header_bg"
        android:id="@+id/cRelativeLayout">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cConstraintLayout"
            android:layout_margin="30sp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:id="@+id/backBtn"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="@dimen/_30sdp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:id="@+id/cSpace"
            android:layout_below="@id/cConstraintLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_height="@dimen/_70sdp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/cRelativeLayout"
        android:background="@drawable/lower_bg"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="-70dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:text="See Your Details Below"
            android:gravity="center"
            android:letterSpacing="0.005"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:id="@+id/enterDetails"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterDetails"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="vertical"
            android:padding="30dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:hint ="@string/name"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:hint ="@string/email"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mobileTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:hint ="@string/mobile_no"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/genderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:hint="@string/gender"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dobTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:hint="@string/dob"
                android:textSize="18sp" />


        </LinearLayout>




    </RelativeLayout>





</RelativeLayout>