<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/lower_bg"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:text="Welcome Back"
            android:gravity="center"
            android:letterSpacing="0.005"
            android:layout_alignParentEnd="true"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:id="@+id/welcomeId"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="match_parent"
            android:text="Enter Your Details Below"
            android:gravity="center"
            android:letterSpacing="0.005"
            android:layout_below="@id/welcomeId"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:id="@+id/enterDetails"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:layout_below="@id/enterDetails"
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@+id/linearLayout"
            android:padding="30dp"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textSize="@dimen/_16sdp"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_16sdp"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:background="@drawable/bg_btn"
            android:layout_marginStart="50dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/signInBtn"
            android:layout_marginEnd="50dp"
            android:layout_below="@id/linearLayout"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/don_t_have_an_account"
            android:gravity="center"
            android:letterSpacing="0.005"
            android:layout_below="@id/signInBtn"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:id="@+id/dontHaveAccount"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</RelativeLayout>